--- a/design.css
+++ b/design.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap');
 :root {
   --sliderpercentage: 0%;
@@ -5,14 +12,24 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: 'Libre Franklin', sans-serif;
 }
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: rgb(34, 34, 34);
   color: white;
   gap: 25px;
@@ -21,15 +38,27 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50% , -50%);
+  -webkit-transform: translate(-50% , -50%);
+      -ms-transform: translate(-50% , -50%);
+          transform: translate(-50% , -50%);
 }
 .headcontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 10px;
-  box-shadow: 0px 0px 5px gray;
+  -webkit-box-shadow: 0px 0px 5px gray;
+          box-shadow: 0px 0px 5px gray;
   border-radius: 5px;
   padding: 15px;
 }
@@ -65,22 +94,30 @@ body {
   border: none;
   border-radius: 5px;
   color: white;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
   border: 2px solid transparent;
 }
 #generatebtn:hover {
   background-color: white;
   color: black;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 #generatebtn:active {
   scale: 1.1;
 }
 .settings {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 2fr;
   grid-template-rows: 1fr 2fr;
-  box-shadow: 0px 0px 5px gray;
+  -webkit-box-shadow: 0px 0px 5px gray;
+          box-shadow: 0px 0px 5px gray;
   width: 100%;
   border-radius: 5px;
   position: relative;
@@ -98,20 +135,26 @@ body {
   width: 100%;
   height: 1px;
   background-color: gray;
-  box-shadow: 0px 0px 5px gray;
+  -webkit-box-shadow: 0px 0px 5px gray;
+          box-shadow: 0px 0px 5px gray;
   position: absolute;
   bottom: -2px;
   left: 0;
 }
 .passwordlength {
+  display: -ms-grid;
   display: grid;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .passwordlength p {
   grid-column: 1 / -1;
   padding: 10px 0;
 }
 .passwordlength label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 15px;
 }
@@ -176,6 +219,7 @@ body {
   margin-right: 15px;
   background: rgba(255, 255, 255, 0.6);
   border-radius: 5px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(crimson), to(crimson));
   background-image: linear-gradient(crimson, crimson);
   /* UPDATE BACKGROUND SIZE WITH JAVASCRIPT !!!!
   add variable for size % and then update all easy*/
@@ -200,14 +244,23 @@ body {
 
 
 .checks {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0px 50px;
   gap: 10px;
 }
 
 .checks label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 10px;
 }
