--- a/design.css
+++ b/design.css
@@ -1,4 +1,5 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap');
 
 :root {
@@ -77,9 +78,15 @@ body {
   text-align: center;
 }
 .passgen {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   width: 100%;
 }
@@ -263,6 +270,7 @@ body {
   border-radius: 100%;
   border: none;
   outline: none;
+  margin-top: -10px;
 }
 
 .rangeinput::-webkit-slider-runnable-track {
